--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ site.title }}</title>
-  </head>
+  {% include head.html %}
   <body>
     {{ content }}
+    {% include scripts.html %}
   </body>
 </html>
